# microGHAPI

./: .editorconfig  ReadMe.md  setup.cfg
.ci/: pythonPackagesToInstallFromGit.txt
miniGHAPI/: APICore.py  Actions.py  GHActionsEnv.py  GitHubAPI.py  idConvert.py
