[metadata]
name = miniGHAPI
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/miniGHAPI.py
description = 
long_description = file: ReadMe.md
keywords = miniGHAPI
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires =
	#urllib3[secure] @ git+https://github.com/urllib3/urllib3.git
	requests @ git+https://github.com/psf/requests.git
	#gql @ git+https://github.com/graphql-python/gql.git
	# its deps
	#graphql-core @ git+https://github.com/graphql-python/graphql-core.git
	#rxpy @ git+https://github.com/ReactiveX/RxPY.git
	#promise @ git+https://github.com/syrusakbary/promise.git

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
